# g1-hello-world

./: .gitignore  README.md  app.py  client.py  head_segment_and_wait.py  main.py  pinocchio_right_arm_demo.py  pinocchio_walk_then_reach_demo.py  pyproject.toml  query.py  run.sh  sim2sim.py
robot_model/: g1.xml  g1_29dof_rev_1_0.xml
src/g1_hello_world/: __init__.py  constants.py  pinocchio_ik.py  realsense_device.py  right_arm_task_controller.py  robot_model.py  timing.py  visualization.py
src/g1_hello_world/cameras/: __init__.py  mujoco_device.py
src/g1_hello_world/estimators/: __init__.py  ground_plane.py  point_track.py
src/g1_hello_world/utils/: string.py
