[project]
name = "g1-hello-world"
version = "0.1.0"
description = "Prototype viewer for Unitree G1 state, MuJoCo geometry, and RealSense video."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.6.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "pyzmq>=27.1.0",
    "rerun-sdk>=0.30.2",
    "viser>=1.0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
